--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "caremanagement-ui",
+  "name": "deserve-web-app",
   "version": "1.0.0",
   "private": true,
-  "proxy": "https://api-dev-healthscout.stratifihealth.com",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.14.13",
+    "@mui/styled-engine": "^5.14.13",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.1",
     "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.5.1",
-    "flowbite": "^2.3.0",
-    "flowbite-react": "0.7.1",
     "i18next": "^23.6.0",
-    "lodash": "^4.17.21",
-    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.9.0",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^6.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,24 +47,6 @@
       ]
     }
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@testing-library/jest-dom": "^6.1.4",
@@ -79,7 +60,6 @@
     "@types/redux-mock-store": "^1.0.6",
     "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "autoprefixer": "^10.4.18",
     "babel-loader": "^9.1.3",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
@@ -90,18 +70,13 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^15.0.2",
-    "postcss": "^8.4.35",
     "prettier": "^3.0.3",
-    "pretty-quick": "^3.1.3",
-    "redux-mock-store": "^1.5.4",
-    "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "redux-mock-store": "^1.5.4"
   },
   "jest": {
     "moduleNameMapper": {
@@ -120,5 +95,17 @@
     },
     "coverageDirectory": "coverage",
     "coveragePathIgnorePatterns": []
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
